[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "napari-deeplabcut"
version = "0.0.1"
description = ""
authors = ["H <a@a.a>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.setuptools_scm]
write_to = "src/napari_deeplabcut/_version.py"
